Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-11-30 [M] Release of cpg1.5.10 {eenemeenemuu}
2010-11-27 [S] Fixed potential security issue during installation (thread ID 68285) {eenemeenemuu}
2010-11-25 [A] Added missing/new plugin hooks to visiblehookpoints plugin {eenemeenemuu}
2010-11-24 [O] Always use PHP time when querying the database (thread ID 67015) {eenemeenemuu}
2010-11-22 [B] No error message for admin during upload if image dimension exceeds configuration value (thread ID 68240) {eenemeenemuu}
2010-11-22 [A] Added plugin hook 'replace_forbidden_conditions' (thread ID 67987) {eenemeenemuu}
2010-11-22 [C] Theme 'curve': remove drop-down menu leftover if empty (thread ID 68243) {eenemeenemuu}
2010-11-20 [B] Fixed use of intermediate-sized image (thread ID 67894) {eenemeenemuu}
2010-11-19 [A] Display more batch add error messages {Nibbler}
2010-11-19 [O] Adjusted/added maxlength parameter for album title/keyword according to database types (thread ID 67671) {eenemeenemuu}
2010-11-19 [O] Consistent use of plugin hook types 'action' and 'filter' (thread ID 67630) {eenemeenemuu}
2010-11-16 [B] Fixed ownership of albums created with xp publisher {Nibbler}
2010-11-15 [B] Add anonymous group if it doesn't exist (thread ID 67137) {eenemeenemuu}
2010-11-14 [B] Fixed comment approval when editing comments (thread ID 68066) {Nibbler}
2010-11-10 [O] No longer specify a MySQL engine - use the server default. {Nibbler}
2010-11-10 [B] Fixed picture manager - show user created albums in public categories (thread ID 67937) {eenemeenemuu}
2010-11-10 [B] Fixed renaming of already added files during batch-add (thread ID 67993) {eenemeenemuu}