@@ -129,6 +129,7 @@
                     <li>Always use PHP time when querying the database (<a href="http://forum.coppermine-gallery.net/index.php/topic,67015.0.html">thread</a>)</li>
                     <li>Added missing/new plugin hooks to visiblehookpoints plugin</li>
                     <li>Fixed potential security issue during installation (<a href="http://forum.coppermine-gallery.net/index.php/topic,68285.0.html">thread</a>)</li>
+                    <li>Fixed issue with language manager (<a href="http://forum.coppermine-gallery.net/index.php/topic,68309.0.html">thread</a>)</li>
                   </ul>
                 </td>
                 <td valign="top" align="right">2010-11-30</td>
