@@ -24,6 +24,7 @@ Changelog
 *********************************************
 
 2010-11-30 [M] Release of cpg1.5.10 {eenemeenemuu}
+2010-11-30 [B] Fixed issue with language manager (thread ID 68309) {eenemeenemuu}
 2010-11-27 [S] Fixed potential security issue during installation (thread ID 68285) {eenemeenemuu}
 2010-11-25 [A] Added missing/new plugin hooks to visiblehookpoints plugin {eenemeenemuu}
 2010-11-24 [O] Always use PHP time when querying the database (thread ID 67015) {eenemeenemuu}
